--- a/gruvbox-dramacool9.user.css
+++ b/gruvbox-dramacool9.user.css
@@ -1,269 +1,325 @@
 /* ==UserStyle==
 @name           Gruvbox-Dramacool9
-@namespace      github.com/touhidulshawan
-@version        1.0.0
+@namespace      github.com/touhidulshawan/gruvbox-dramacool9
+@version        1.0.2.1
 @description    Gruvbox Dark Theme for Dramacool9.co
-@homepageURL    https://github.com/touhidulshawan/gruvbox-dramacool9
 @author         Touhidul Shawan
 ==/UserStyle== */
-
 @-moz-document domain("dramacool9.co") {
-  html {
-    --bg-primary: #282828;
-    --bg-secondary: #1d2021;
-    --fg-primary: #d5c4a1;
-    --fg-secondary: #d5c4a1;
-    --comment: #32302f;
-    --red: #cc241d;
-    --green: #98971a;
-    --yellow: #d79921;
-    --blue: #458588;
-    --magenta: #b16286;
-    --cyan: #689d6a;
-    --orange: #d65d0e;
-    --shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  }
+    html {
+        --bg-primary: #282828;
+        --bg-secondary: #1d2021;
+        --fg-primary: #ebdbb2;
+        --fg-secondary: #d5c4a1;
+        --comment: #32302f;
+        --red: #cc241d;
+        --green: #98971a;
+        --yellow: #d79921;
+        --blue: #458588;
+        --magenta: #b16286;
+        --cyan: #689d6a;
+        --orange: #d65d0e;
+        --shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    }
 
-  body,
-  .site-branding {
-    background: var(--bg-primary);
-  }
-  p{
-    color: var(--fg-primary);
-  }
+    body,
+    .site-branding {
+        background: var(--bg-primary);
+    }
+    h1 {
+        color: var(--yellow);
+    }
+    p {
+        color: var(--fg-primary);
+    }
 
-  #masthead {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: row-reverse;
-    background: var(--bg-primary);
-  }
+    #masthead {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: row-reverse;
+        background: var(--bg-primary);
+    }
 
-  .site-title {
-    display: none !important;
-  }
+    .site-title {
+        display: none !important;
+    }
 
-  .search-main {
-    bottom: 20px !important;
-  }
+    .search-main {
+        bottom: 20px !important;
+    }
 
-  .search-field {
-    background: var(--fg-primary) !important;
-    color: var(--bg-primary) !important;
-    border: 2px solid var(--blue) !important;
-  }
+    .search-field {
+        background: var(--fg-primary) !important;
+        color: var(--bg-primary) !important;
+        border: 2px solid var(--blue) !important;
+    }
 
-  .search-submit {
-    background: var(--fg-primary) !important;
-  }
-  #main-navbar {
-    background: var(--comment);
-    margin-right: auto;
-  }
+    .search-submit {
+        background: var(--fg-primary) !important;
+    }
+    #main-navbar {
+        background: var(--comment);
+        margin-right: auto;
+    }
 
-  #main-menu {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 3px;
-  }
-  #main-menu > li {
-    border-right: none !important;
-    background: var(--cyan);
-    border-radius: 4px;
-  }
+    #main-menu {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 3px;
+    }
+    #main-menu > li {
+        border-right: none !important;
+        background: var(--cyan);
+        border-radius: 4px;
+    }
 
-  #main-menu > li > a {
-    color: var(--bg-secondary) !important;
-    transition: all 0.3s ease-in-out;
-  }
+    #main-menu > li > a {
+        color: var(--bg-secondary) !important;
+        transition: all 0.3s ease-in-out;
+    }
 
-  #main-menu > li > a:hover {
-    background: var(--green);
-    border-radius: 4px;
-  }
+    #main-menu > li > a:hover {
+        background: var(--green);
+        border-radius: 4px;
+    }
 
-  #main-menu > li.current-menu-item {
-    background: var(--magenta) !important;
-  }
+    #main-menu > li.current-menu-item {
+        background: var(--magenta) !important;
+    }
 
-  a {
-    color: var(--cyan) !important;
-  }
+    a {
+        color: var(--cyan) !important;
+    }
 
-  a:visited {
-    color: var(--magenta) !important;
-  }
+    a:visited {
+        color: var(--magenta) !important;
+    }
 
-  .sub-menu {
-    background: var(--bg-secondary) !important;
-  }
+    .sub-menu {
+        background: var(--bg-secondary) !important;
+    }
 
-  .menu-item:hover {
-    background: var(--comment) !important;
-  }
-  .nav-tabs > li {
-    background: var(--blue) !important;
-  }
-  .nav-tabs > li > a {
-    color: var(--bg-primary) !important;
-  }
-  .nav-tabs li.active {
-    background: var(--yellow) !important;
-  }
-  .nav-tabs li.active > a {
-    color: var(--bg-primary) !important;
-  }
+    .menu-item:hover {
+        background: var(--comment) !important;
+    }
+    .nav-tabs > li {
+        background: var(--blue) !important;
+    }
+    .nav-tabs > li > a {
+        color: var(--bg-primary)!important;
+    }
+    .nav-tabs li.active {
+        background: var(--yellow) !important;
+    }
+    .nav-tabs li.active > a {
+        color: var(--bg-primary)!important;
+    }
 
-  .tab-content {
-    background: var(--bg-secondary) !important;
-    border: 1px solid var(--comment) !important;
+    .content-area {
+        float: none;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+main {
+    width: 100%;
+}
+
+.tab-content {
+    background: var(--bg-primary) !important;
+    border: none;
     padding: 5px !important;
     margin: 10px !important;
+}
+ul.box {
+    display: grid !important;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(275px, auto);
+    gap: 25px;
+    padding: 8px;
+}
+ul.box > li {
+    width: 100% !important;
+    border: 3px solid var(--yellow);
+    border-radius: 4px;
     box-shadow: var(--shadow);
-    border-radius: 8px;
-  }
-  ul.box .ep.sub {
-    background: var(--blue) !important;
+    transition: all 0.2s ease-in-out;
+}
+ul.box > li:hover {
+    border-color: var(--magenta);
+    transform: translateY(5px);
+}
+ul.box .ep {
+    right: 0;
+}
+ul.box .ep.sub {
+    background: var(--blue)!important;
     padding: 4px;
     color: var(--fg-primary) !important;
-  }
-  ul.box .ep.raw {
+}
+ul.box .ep.raw {
     background: var(--yellow) !important;
     padding: 4px;
     color: var(--bg-primary) !important;
-  }
-  ul.box li {
+}
+ul.box li {
     background: transparent !important;
-  }
-  ul.box li::before {
-    background: var(--comment) !important;
-  }
-  ul.box .time {
-    color: var(--orange) !important;
+}
+ul.box li::before {
+    background: var(--bg-secondary) !important;
+}
+ul.box .time {
+    color: var(--orange)!important;
     font-weight: bold;
-  }
-  ul.box h3 {
+}
+ul.box h3 {
     color: var(--fg-primary) !important;
-  }
-  ul.list .sub.raw {
+}
+ul.list .sub.raw {
     background: var(--yellow) !important;
-    color: var(--bg-primary) !important;
-  }
-  .blog-content {
+    color: var(--bg-primary)!important;
+}
+.blog-content {
+    display: none !important;
     background: var(--magenta) !important;
     border-color: var(--comment) !important;
     box-shadow: var(--shadow);
     border-radius: 5px;
-  }
+}
+.sidebar {
+    display: none !important;
+}
 
-  .site-footer {
+.site-footer {
     background: var(--bg-primary);
-    border: 5px solid var(--orange);
-    border-radius: 2px;
-  }
+    border-top: 2px solid var(--bg-secondary);
+}
 
-  #player-content {
+.site-footer > .footer-copy > .container > .row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.site-footer > .footer-copy > .container > .row > .col-6 > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+#player-content {
     background: var(--bg-primary);
     border-color: var(--green);
     border-radius: 4px;
     box-shadow: var(--shadow);
-  }
-  span,
-  .text_above_player {
+}
+
+#myVideo {
+    min-height: 40px !important;
+}
+
+.jwplayer.jw-flag-aspect-mode {
+    height: 400px !important;
+}
+
+span,
+.text_above_player {
     color: var(--fg-primary);
     font-weight: bold;
-  }
+}
 
-  .twitter {
+.twitter {
     background: var(--blue) !important;
-    color: var(--fg-primary) !important;
-  }
-  .offlight {
+    color: var(--fg-primary)!important;
+}
+.offlight {
     background: var(--yellow) !important;
-  }
-  .download {
+}
+.download {
     background: var(--blue) !important;
-  }
-  #w-server {
+}
+#w-server {
     background: var(--bg-primary);
     color: var(--fg-primary);
-  }
-  #w-server div:hover span,
-  #w-server div.active span {
+}
+#w-server div:hover span,
+#w-server div.active span {
     background: var(--yellow) !important;
     color: var(--bg-primary) !important;
-  }
-  #w-server div:nth-child(2n + 1) {
+}
+#w-server div:nth-child(2n+1) {
     background: var(--comment) !important;
-  }
+}
 
-  .wrapper {
+.wrapper {
     background: var(--bg-primary);
     border-color: var(--comment);
-  }
+}
 
-  #all-episodes > ul > li:hover {
+#all-episodes > ul > li:hover {
     background: var(--comment);
-  }
+}
 
-  .current > h3 > a {
+.current > h3 > a {
     color: var(--green) !important;
-  }
-  .list li:nth-child(2n) {
+}
+.list li:nth-child(2n) {
     background: var(--bg-secondary);
-  }
-  ul.list .sub.subbed {
+}
+ul.list .sub.subbed {
     background: var(--blue) !important;
-    color: var(--fg-primary) !important;
-  }
-  .comments-title {
-    color: var(--fg-primary) !important;
-  }
-  .comments-title > span {
+    color: var(--fg-primary)!important;
+}
+.comments-title {
+    color: var(--fg-primary)!important;
+}
+.comments-title > span {
     color: var(--orange) !important;
-  }
-  .comment-list {
+}
+.comment-list {
     background: var(--bg-secondary) !important;
     border: 2px solid var(--cyan);
     border-radius: 6px;
     box-shadow: var(--shadow);
-  }
-  .comment-list li {
+}
+.comment-list li {
     border-bottom-color: var(--comment) !important;
-  }
-  .comment-list .comment-author .fn {
-    color: var(--cyan) !important;
-  }
-  time {
+}
+.comment-list .comment-author .fn {
+    color: var(--cyan)!important;
+}
+time {
     color: var(--fg-secondary) !important;
-  }
-  .comment-content p {
-    color: var(--fg-primary) !important;
-  }
+}
+.comment-content p {
+    color: var(--fg-primary)!important;
+}
 
-  #reply-title {
+#reply-title {
     color: var(--fg-secondary);
-  }
-  #cancel-comment-reply-link {
+}
+#cancel-comment-reply-link {
     margin-left: 5px;
-    color: var(--red) !important;
-  }
-  label {
+    color: var(--red)!important;
+}
+label {
     color: var(--fg-secondary) !important;
     padding-bottom: 4px;
-  }
-  textarea,
-  input[type="text"],
-  input[type="email"],
-  input[type="url"] {
+}
+textarea,
+input[type="text"],
+input[type="email"],
+input[type="url"] {
     background: var(--comment) !important;
     color: var(--fg-secondary) !important;
-    border-color: var(--magenta) !important;
-  }
-  .submit {
+    border-color: var(--magenta) !important
+}
+.submit {
     background: var(--yellow) !important;
     color: var(--bg-primary) !important;
-  }
 }
