--- a/gruvbox-dramacool9.user.css
+++ b/gruvbox-dramacool9.user.css
@@ -1,11 +1,11 @@
 /* ==UserStyle==
 @name           Gruvbox-Dramacool9
 @namespace      github.com/touhidulshawan/gruvbox-dramacool9
-@version        1.0.2.1
+@version        1.0.3
 @description    Gruvbox Dark Theme for Dramacool9.co
 @author         Touhidul Shawan
 ==/UserStyle== */
-@-moz-document domain("dramacool9.co") {
+@-moz-document url-prefix("https://www.dramacool9.co") {
     html {
         --bg-primary: #282828;
         --bg-secondary: #1d2021;
@@ -124,202 +124,202 @@
         justify-content: center;
         align-items: center;
     }
-}
 
-main {
-    width: 100%;
-}
+    main {
+        width: 100%;
+    }
 
-.tab-content {
-    background: var(--bg-primary) !important;
-    border: none;
-    padding: 5px !important;
-    margin: 10px !important;
-}
-ul.box {
-    display: grid !important;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(275px, auto);
-    gap: 25px;
-    padding: 8px;
-}
-ul.box > li {
-    width: 100% !important;
-    border: 3px solid var(--yellow);
-    border-radius: 4px;
-    box-shadow: var(--shadow);
-    transition: all 0.2s ease-in-out;
-}
-ul.box > li:hover {
-    border-color: var(--magenta);
-    transform: translateY(5px);
-}
-ul.box .ep {
-    right: 0;
-}
-ul.box .ep.sub {
-    background: var(--blue)!important;
-    padding: 4px;
-    color: var(--fg-primary) !important;
-}
-ul.box .ep.raw {
-    background: var(--yellow) !important;
-    padding: 4px;
-    color: var(--bg-primary) !important;
-}
-ul.box li {
-    background: transparent !important;
-}
-ul.box li::before {
-    background: var(--bg-secondary) !important;
-}
-ul.box .time {
-    color: var(--orange)!important;
-    font-weight: bold;
-}
-ul.box h3 {
-    color: var(--fg-primary) !important;
-}
-ul.list .sub.raw {
-    background: var(--yellow) !important;
-    color: var(--bg-primary)!important;
-}
-.blog-content {
-    display: none !important;
-    background: var(--magenta) !important;
-    border-color: var(--comment) !important;
-    box-shadow: var(--shadow);
-    border-radius: 5px;
-}
-.sidebar {
-    display: none !important;
-}
+    .tab-content {
+        background: var(--bg-primary) !important;
+        border: none;
+        padding: 5px !important;
+        margin: 10px !important;
+    }
+    ul.box {
+        display: grid !important;
+        grid-template-columns: repeat(4, 1fr);
+        grid-auto-rows: minmax(275px, auto);
+        gap: 25px;
+        padding: 8px;
+    }
+    ul.box > li {
+        width: 100% !important;
+        border: 3px solid var(--yellow);
+        border-radius: 4px;
+        box-shadow: var(--shadow);
+        transition: all 0.2s ease-in-out;
+    }
+    ul.box > li:hover {
+        border-color: var(--magenta);
+        transform: translateY(5px);
+    }
+    ul.box .ep {
+        right: 0;
+    }
+    ul.box .ep.sub {
+        background: var(--blue)!important;
+        padding: 4px;
+        color: var(--fg-primary) !important;
+    }
+    ul.box .ep.raw {
+        background: var(--yellow) !important;
+        padding: 4px;
+        color: var(--bg-primary) !important;
+    }
+    ul.box li {
+        background: transparent !important;
+    }
+    ul.box li::before {
+        background: var(--bg-secondary) !important;
+    }
+    ul.box .time {
+        color: var(--orange)!important;
+        font-weight: bold;
+    }
+    ul.box h3 {
+        color: var(--fg-primary) !important;
+    }
+    ul.list .sub.raw {
+        background: var(--yellow) !important;
+        color: var(--bg-primary)!important;
+    }
+    .blog-content {
+        display: none !important;
+        background: var(--magenta) !important;
+        border-color: var(--comment) !important;
+        box-shadow: var(--shadow);
+        border-radius: 5px;
+    }
+    .sidebar {
+        display: none !important;
+    }
 
-.site-footer {
-    background: var(--bg-primary);
-    border-top: 2px solid var(--bg-secondary);
-}
+    .site-footer {
+        background: var(--bg-primary);
+        border-top: 2px solid var(--bg-secondary);
+    }
 
-.site-footer > .footer-copy > .container > .row {
-    display: flex;
-    justify-content: space-between;
-}
+    .site-footer > .footer-copy > .container > .row {
+        display: flex;
+        justify-content: space-between;
+    }
 
-.site-footer > .footer-copy > .container > .row > .col-6 > ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
+    .site-footer > .footer-copy > .container > .row > .col-6 > ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
 
-#player-content {
-    background: var(--bg-primary);
-    border-color: var(--green);
-    border-radius: 4px;
-    box-shadow: var(--shadow);
-}
+    #player-content {
+        background: var(--bg-primary);
+        border-color: var(--green);
+        border-radius: 4px;
+        box-shadow: var(--shadow);
+    }
 
-#myVideo {
-    min-height: 40px !important;
-}
+    #myVideo {
+        min-height: 40px !important;
+    }
 
-.jwplayer.jw-flag-aspect-mode {
-    height: 400px !important;
-}
+    .jwplayer.jw-flag-aspect-mode {
+        height: 400px !important;
+    }
 
-span,
-.text_above_player {
-    color: var(--fg-primary);
-    font-weight: bold;
-}
+    span,
+    .text_above_player {
+        color: var(--fg-primary);
+        font-weight: bold;
+    }
 
-.twitter {
-    background: var(--blue) !important;
-    color: var(--fg-primary)!important;
-}
-.offlight {
-    background: var(--yellow) !important;
-}
-.download {
-    background: var(--blue) !important;
-}
-#w-server {
-    background: var(--bg-primary);
-    color: var(--fg-primary);
-}
-#w-server div:hover span,
-#w-server div.active span {
-    background: var(--yellow) !important;
-    color: var(--bg-primary) !important;
-}
-#w-server div:nth-child(2n+1) {
-    background: var(--comment) !important;
-}
+    .twitter {
+        background: var(--blue) !important;
+        color: var(--fg-primary)!important;
+    }
+    .offlight {
+        background: var(--yellow) !important;
+    }
+    .download {
+        background: var(--blue) !important;
+    }
+    #w-server {
+        background: var(--bg-primary);
+        color: var(--fg-primary);
+    }
+    #w-server div:hover span,
+    #w-server div.active span {
+        background: var(--yellow) !important;
+        color: var(--bg-primary) !important;
+    }
+    #w-server div:nth-child(2n + 1) {
+        background: var(--comment) !important;
+    }
 
-.wrapper {
-    background: var(--bg-primary);
-    border-color: var(--comment);
-}
+    .wrapper {
+        background: var(--bg-primary);
+        border-color: var(--comment);
+    }
 
-#all-episodes > ul > li:hover {
-    background: var(--comment);
-}
+    #all-episodes > ul > li:hover {
+        background: var(--comment);
+    }
 
-.current > h3 > a {
-    color: var(--green) !important;
-}
-.list li:nth-child(2n) {
-    background: var(--bg-secondary);
-}
-ul.list .sub.subbed {
-    background: var(--blue) !important;
-    color: var(--fg-primary)!important;
-}
-.comments-title {
-    color: var(--fg-primary)!important;
-}
-.comments-title > span {
-    color: var(--orange) !important;
-}
-.comment-list {
-    background: var(--bg-secondary) !important;
-    border: 2px solid var(--cyan);
-    border-radius: 6px;
-    box-shadow: var(--shadow);
-}
-.comment-list li {
-    border-bottom-color: var(--comment) !important;
-}
-.comment-list .comment-author .fn {
-    color: var(--cyan)!important;
-}
-time {
-    color: var(--fg-secondary) !important;
-}
-.comment-content p {
-    color: var(--fg-primary)!important;
-}
+    .current > h3 > a {
+        color: var(--green) !important;
+    }
+    .list li:nth-child(2n) {
+        background: var(--bg-secondary);
+    }
+    ul.list .sub.subbed {
+        background: var(--blue) !important;
+        color: var(--fg-primary)!important;
+    }
+    .comments-title {
+        color: var(--fg-primary)!important;
+    }
+    .comments-title > span {
+        color: var(--orange) !important;
+    }
+    .comment-list {
+        background: var(--bg-secondary) !important;
+        border: 2px solid var(--cyan);
+        border-radius: 6px;
+        box-shadow: var(--shadow);
+    }
+    .comment-list li {
+        border-bottom-color: var(--comment) !important;
+    }
+    .comment-list .comment-author .fn {
+        color: var(--cyan)!important;
+    }
+    time {
+        color: var(--fg-secondary) !important;
+    }
+    .comment-content p {
+        color: var(--fg-primary)!important;
+    }
 
-#reply-title {
-    color: var(--fg-secondary);
-}
-#cancel-comment-reply-link {
-    margin-left: 5px;
-    color: var(--red)!important;
-}
-label {
-    color: var(--fg-secondary) !important;
-    padding-bottom: 4px;
-}
-textarea,
-input[type="text"],
-input[type="email"],
-input[type="url"] {
-    background: var(--comment) !important;
-    color: var(--fg-secondary) !important;
-    border-color: var(--magenta) !important
-}
-.submit {
-    background: var(--yellow) !important;
-    color: var(--bg-primary) !important;
+    #reply-title {
+        color: var(--fg-secondary);
+    }
+    #cancel-comment-reply-link {
+        margin-left: 5px;
+        color: var(--red)!important;
+    }
+    label {
+        color: var(--fg-secondary) !important;
+        padding-bottom: 4px;
+    }
+    textarea,
+    input[type="text"],
+    input[type="email"],
+    input[type="url"] {
+        background: var(--comment) !important;
+        color: var(--fg-secondary) !important;
+        border-color: var(--magenta) !important
+    }
+    .submit {
+        background: var(--yellow) !important;
+        color: var(--bg-primary) !important;
+    }
 }
