--- a/gruvbox-dramacool9.user.css
+++ b/gruvbox-dramacool9.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Gruvbox-Dramacool9
 @namespace      github.com/touhidulshawan/gruvbox-dramacool9
-@version        1.0.3
+@version        1.0.3.1
 @description    Gruvbox Dark Theme for Dramacool9.co
 @author         Touhidul Shawan
 ==/UserStyle== */
@@ -137,7 +137,7 @@
     }
     ul.box {
         display: grid !important;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-auto-rows: minmax(275px, auto);
         gap: 25px;
         padding: 8px;
