--- a/gruvbox-dramacool9.user.css
+++ b/gruvbox-dramacool9.user.css
@@ -5,7 +5,7 @@
 @description    Gruvbox Dark Theme for Dramacool9.pw
 @author         Touhidul Shawan
 ==/UserStyle== */
-@-moz-document url-prefix("https://ww1.dramacool9.pw/") {
+@-moz-document url-prefix("https://www.dramacool9.ac") {
     * {
         margin: 0;
         padding: 0;
