--- a/gruvbox-dramacool9.user.css
+++ b/gruvbox-dramacool9.user.css
@@ -5,377 +5,378 @@
 @description    Gruvbox Dark Theme for Dramacool9.pw
 @author         Touhidul Shawan
 ==/UserStyle== */
-@-moz-document url-prefix("https://www.dramacool9.ac") {
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    html {
-        --bg-primary: #282828;
-        --bg-secondary: #1d2021;
-        --fg-primary: #ebdbb2;
-        --fg-secondary: #d5c4a1;
-        --comment: #32302f;
-        --red: #cc241d;
-        --green: #98971a;
-        --yellow: #d79921;
-        --blue: #458588;
-        --magenta: #b16286;
-        --cyan: #689d6a;
-        --orange: #d65d0e;
-        --shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    }
+@-moz-document url-prefix("https://www.dramacool9.ac")
+{
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html {
+    --bg-primary: #282828;
+    --bg-secondary: #1d2021;
+    --fg-primary: #ebdbb2;
+    --fg-secondary: #d5c4a1;
+    --comment: #32302f;
+    --red: #cc241d;
+    --green: #98971a;
+    --yellow: #d79921;
+    --blue: #458588;
+    --magenta: #b16286;
+    --cyan: #689d6a;
+    --orange: #d65d0e;
+    --shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  }
 
-    body,
-    .site-branding {
-        background: var(--bg-primary);
-    }
-    h1 {
-        color: var(--yellow);
-    }
-    p {
-        color: var(--fg-primary);
-    }
+  body,
+  .site-branding {
+    background: var(--bg-primary);
+  }
+  h1 {
+    color: var(--yellow);
+  }
+  p {
+    color: var(--fg-primary);
+  }
 
-    #page {
-        max-width: 960px;
-        margin: 10px auto;
-        border: 8px dashed var(--comment);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-    }
-    #masthead {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        flex-direction: column-reverse;
-        background: var(--bg-primary);
-        margin: 8px 2px;
-    }
-    .header-top {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%
-    }
+  #page {
+    max-width: 960px;
+    margin: 10px auto;
+    border: 8px dashed var(--comment);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+  #masthead {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column-reverse;
+    background: var(--bg-primary);
+    margin: 8px 2px;
+  }
+  .header-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
 
-    .site-title {
-        display: none !important;
-    }
-    .search-main {
-        right: auto;
-    }
-    .search-field {
-        background: var(--comment) !important;
-        color: var(--fg-primary) !important;
-        border: 3px dashed var(--blue) !important;
-        width: 400px !important;
-        padding: 16px !important;
-    }
+  .site-title {
+    display: none !important;
+  }
+  .search-main {
+    right: auto;
+  }
+  .search-field {
+    background: var(--comment) !important;
+    color: var(--fg-primary) !important;
+    border: 3px dashed var(--blue) !important;
+    width: 400px !important;
+    padding: 16px !important;
+  }
 
-    .search-submit {
-        background: var(--yellow) !important;
-        color: var(--bg-primary);
-        width: 38px !important;
-        height: 38px !important;
-        top: 0 !Important;
-        right: 0 !Important;
-        border: 4px solid var(--yellow) !important;
-        font-size: 20px !important;
-    }
-    #main-navbar {
-        background: var(--comment);
-        margin-right: auto;
-    }
+  .search-submit {
+    background: var(--yellow) !important;
+    color: var(--bg-primary);
+    width: 38px !important;
+    height: 38px !important;
+    top: 0 !important;
+    right: 0 !important;
+    border: 4px solid var(--yellow) !important;
+    font-size: 20px !important;
+  }
+  #main-navbar {
+    background: var(--comment);
+    margin-right: auto;
+  }
 
-    .main-navbar {
-        height: 38px !important;
-    }
+  .main-navbar {
+    height: 38px !important;
+  }
 
-    #main-menu {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 3px;
-    }
-    #main-menu > li {
-        border-right: none !important;
-        background: var(--cyan);
-        border-radius: 2px;
-    }
+  #main-menu {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 3px;
+  }
+  #main-menu > li {
+    border-right: none !important;
+    background: var(--cyan);
+    border-radius: 2px;
+  }
 
-    #main-menu > li > a {
-        color: var(--bg-secondary) !important;
-        padding: 10px 12px !important;
-        transition: all 0.3s ease-in-out;
-    }
+  #main-menu > li > a {
+    color: var(--bg-secondary) !important;
+    padding: 10px 12px !important;
+    transition: all 0.3s ease-in-out;
+  }
 
-    #main-menu > li > a:hover {
-        background: var(--green);
-        border-radius: 2px;
-    }
+  #main-menu > li > a:hover {
+    background: var(--green);
+    border-radius: 2px;
+  }
 
-    #main-menu > li.current-menu-item {
-        background: var(--magenta) !important;
-    }
+  #main-menu > li.current-menu-item {
+    background: var(--magenta) !important;
+  }
 
-    a {
-        color: var(--cyan) !important;
-    }
+  a {
+    color: var(--cyan) !important;
+  }
 
-    a:visited {
-        color: var(--magenta) !important;
-    }
+  a:visited {
+    color: var(--magenta) !important;
+  }
 
-    .main-menu > li:hover > ul,
-    .main-menu > li.focus > ul {
-        top: 35px !important;
-    }
+  .main-menu > li:hover > ul,
+  .main-menu > li.focus > ul {
+    top: 35px !important;
+  }
 
-    .sub-menu {
-        background: var(--bg-primary) !important;
-        border: 2px dashed var(--orange) !important;
-    }
+  .sub-menu {
+    background: var(--bg-primary) !important;
+    border: 2px dashed var(--orange) !important;
+  }
 
-    .menu-item:hover {
-        background: var(--comment) !important;
-    }
-    .nav-tabs > li {
-        background: var(--blue) !important;
-    }
-    .nav-tabs > li > a {
-        color: var(--bg-primary)!important;
-    }
-    .nav-tabs li.active {
-        background: var(--yellow) !important;
-    }
-    .nav-tabs li.active > a {
-        color: var(--bg-primary)!important;
-    }
+  .menu-item:hover {
+    background: var(--comment) !important;
+  }
+  .nav-tabs > li {
+    background: var(--blue) !important;
+  }
+  .nav-tabs > li > a {
+    color: var(--bg-primary) !important;
+  }
+  .nav-tabs li.active {
+    background: var(--yellow) !important;
+  }
+  .nav-tabs li.active > a {
+    color: var(--bg-primary) !important;
+  }
 
-    .content-area {
-        float: none;
-        width: 77.4%;
-    }
+  .content-area {
+    float: none;
+    width: 77.4%;
+  }
 
-    main {
-        width: 100%;
-    }
+  main {
+    width: 100%;
+  }
 
-    .site-content {
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
+  .site-content {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
 
-    .site-info {
-        padding: 0px !important;
-        margin-bottom: 0px !important;
-    }
+  .site-info {
+    padding: 0px !important;
+    margin-bottom: 0px !important;
+  }
 
-    .tab-content {
-        background: var(--bg-primary) !important;
-        border: none;
-        padding: 5px !important;
-        margin: 10px !important;
-    }
-    ul.box {
-        display: grid !important;
-        grid-template-columns: repeat(auto-fit, minmax(155px, 1fr));
-        grid-auto-rows: minmax(180px, auto);
-        gap: 25px;
-        padding: 8px;
-    }
-    ul.box > li {
-        width: 100% !important;
-        border: 3px solid var(--yellow);
-        border-radius: 4px;
-        box-shadow: var(--shadow);
-        transition: all 0.2s ease-in-out;
-    }
-    ul.box > li:hover,
-    li:focus {
-        border-color: var(--magenta);
-        transform: translateY(5px);
-    }
-    ul.box .ep {
-        right: 0;
-    }
-    ul.box .ep.sub {
-        background: var(--blue)!important;
-        padding: 4px;
-        color: var(--fg-primary) !important;
-    }
-    ul.box .ep.raw {
-        background: var(--yellow) !important;
-        padding: 4px;
-        color: var(--bg-primary) !important;
-    }
-    ul.box li {
-        background: transparent !important;
-    }
-    ul.box li::before {
-        background: var(--bg-secondary) !important;
-    }
-    ul.box .time {
-        color: var(--orange)!important;
-        font-weight: bold;
-    }
-    ul.box h3 {
-        color: var(--fg-primary) !important;
-    }
-    ul.list .sub.raw {
-        background: var(--yellow) !important;
-        color: var(--bg-primary)!important;
-    }
-    .blog-content {
-        display: none !important;
-    }
-    .sidebar {
-        display: none !important;
-    }
+  .tab-content {
+    background: var(--bg-primary) !important;
+    border: none;
+    padding: 5px !important;
+    margin: 10px !important;
+  }
+  ul.box {
+    display: grid !important;
+    grid-template-columns: repeat(auto-fit, minmax(155px, 1fr));
+    grid-auto-rows: minmax(180px, auto);
+    gap: 25px;
+    padding: 8px;
+  }
+  ul.box > li {
+    width: 100% !important;
+    border: 3px solid var(--yellow);
+    border-radius: 4px;
+    box-shadow: var(--shadow);
+    transition: all 0.2s ease-in-out;
+  }
+  ul.box > li:hover,
+  li:focus {
+    border-color: var(--magenta);
+    transform: translateY(5px);
+  }
+  ul.box .ep {
+    right: 0;
+  }
+  ul.box .ep.sub {
+    background: var(--blue) !important;
+    padding: 4px;
+    color: var(--fg-primary) !important;
+  }
+  ul.box .ep.raw {
+    background: var(--yellow) !important;
+    padding: 4px;
+    color: var(--bg-primary) !important;
+  }
+  ul.box li {
+    background: transparent !important;
+  }
+  ul.box li::before {
+    background: var(--bg-secondary) !important;
+  }
+  ul.box .time {
+    color: var(--orange) !important;
+    font-weight: bold;
+  }
+  ul.box h3 {
+    color: var(--fg-primary) !important;
+  }
+  ul.list .sub.raw {
+    background: var(--yellow) !important;
+    color: var(--bg-primary) !important;
+  }
+  .blog-content {
+    display: none !important;
+  }
+  .sidebar {
+    display: none !important;
+  }
 
-    .site-footer {
-        width: 100%;
-        background: var(--bg-primary);
-        border-top: 8px dotted var(--comment);
-    }
+  .site-footer {
+    width: 100%;
+    background: var(--bg-primary);
+    border-top: 8px dotted var(--comment);
+  }
 
-    .site-footer > .footer-copy > .container > .row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+  .site-footer > .footer-copy > .container > .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    .site-footer > .footer-copy > .container > .row > .col-6 > ul {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-    }
+  .site-footer > .footer-copy > .container > .row > .col-6 > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
 
-    #player-content {
-        background: var(--bg-primary);
-        border-color: var(--green);
-        border-radius: 4px;
-        box-shadow: var(--shadow);
-    }
+  #player-content {
+    background: var(--bg-primary);
+    border-color: var(--green);
+    border-radius: 4px;
+    box-shadow: var(--shadow);
+  }
 
-    span,
-    .text_above_player {
-        color: var(--fg-primary);
-        font-weight: bold;
-    }
+  span,
+  .text_above_player {
+    color: var(--fg-primary);
+    font-weight: bold;
+  }
 
-    .twitter {
-        background: var(--blue) !important;
-        color: var(--fg-primary)!important;
-    }
-    .offlight {
-        background: var(--yellow) !important;
-    }
-    .download {
-        background: var(--blue) !important;
-    }
-    #w-server {
-        background: var(--bg-primary);
-        color: var(--fg-primary);
-    }
-    #w-server div:hover span,
-    #w-server div.active span {
-        background: var(--yellow) !important;
-        color: var(--bg-primary) !important;
-    }
-    #w-server div:nth-child(2n + 1) {
-        background: var(--comment) !important;
-    }
+  .twitter {
+    background: var(--blue) !important;
+    color: var(--fg-primary) !important;
+  }
+  .offlight {
+    background: var(--yellow) !important;
+  }
+  .download {
+    background: var(--blue) !important;
+  }
+  #w-server {
+    background: var(--bg-primary);
+    color: var(--fg-primary);
+  }
+  #w-server div:hover span,
+  #w-server div.active span {
+    background: var(--yellow) !important;
+    color: var(--bg-primary) !important;
+  }
+  #w-server div:nth-child(2n + 1) {
+    background: var(--comment) !important;
+  }
 
-    .wrapper {
-        background: var(--bg-primary);
-        border: none !important;
-    }
+  .wrapper {
+    background: var(--bg-primary);
+    border: none !important;
+  }
 
-    #all-episodes > ul > li:hover {
-        background: var(--comment);
-    }
+  #all-episodes > ul > li:hover {
+    background: var(--comment);
+  }
 
-    .current > h3 > a {
-        color: var(--green) !important;
-    }
-    .list li:nth-child(2n) {
-        background: var(--bg-secondary);
-    }
-    ul.list .sub.subbed {
-        background: var(--blue) !important;
-        color: var(--fg-primary)!important;
-    }
-    .comments-title {
-        color: var(--fg-primary)!important;
-    }
-    .comments-title > span {
-        color: var(--orange) !important;
-    }
-    .comment-list {
-        background: var(--bg-secondary) !important;
-        border: 2px solid var(--cyan);
-        border-radius: 6px;
-        box-shadow: var(--shadow);
-    }
-    .comment-list li {
-        border-bottom-color: var(--comment) !important;
-    }
-    .comment-list .comment-author .fn {
-        color: var(--cyan)!important;
-    }
-    time {
-        color: var(--fg-secondary) !important;
-    }
-    .comment-content p {
-        color: var(--fg-primary)!important;
-    }
+  .current > h3 > a {
+    color: var(--green) !important;
+  }
+  .list li:nth-child(2n) {
+    background: var(--bg-secondary);
+  }
+  ul.list .sub.subbed {
+    background: var(--blue) !important;
+    color: var(--fg-primary) !important;
+  }
+  .comments-title {
+    color: var(--fg-primary) !important;
+  }
+  .comments-title > span {
+    color: var(--orange) !important;
+  }
+  .comment-list {
+    background: var(--bg-secondary) !important;
+    border: 2px solid var(--cyan);
+    border-radius: 6px;
+    box-shadow: var(--shadow);
+  }
+  .comment-list li {
+    border-bottom-color: var(--comment) !important;
+  }
+  .comment-list .comment-author .fn {
+    color: var(--cyan) !important;
+  }
+  time {
+    color: var(--fg-secondary) !important;
+  }
+  .comment-content p {
+    color: var(--fg-primary) !important;
+  }
 
-    #reply-title {
-        color: var(--fg-secondary);
-    }
-    #cancel-comment-reply-link {
-        margin-left: 5px;
-        color: var(--red)!important;
-    }
-    label {
-        color: var(--fg-secondary) !important;
-        padding-bottom: 4px;
-    }
-    textarea,
-    input[type="text"],
-    input[type="email"],
-    input[type="url"] {
-        background: var(--comment) !important;
-        color: var(--fg-secondary) !important;
-        border-color: var(--magenta) !important
-    }
-    .submit {
-        background: var(--yellow) !important;
-        color: var(--bg-primary) !important;
-    }
+  #reply-title {
+    color: var(--fg-secondary);
+  }
+  #cancel-comment-reply-link {
+    margin-left: 5px;
+    color: var(--red) !important;
+  }
+  label {
+    color: var(--fg-secondary) !important;
+    padding-bottom: 4px;
+  }
+  textarea,
+  input[type="text"],
+  input[type="email"],
+  input[type="url"] {
+    background: var(--comment) !important;
+    color: var(--fg-secondary) !important;
+    border-color: var(--magenta) !important;
+  }
+  .submit {
+    background: var(--yellow) !important;
+    color: var(--bg-primary) !important;
+  }
 
-    .more-link > a {
-        background: var(--blue) !important;
-        padding: 8px 12px !important;
-        color: var(--fg-primary) !important;
-        font-weight: bold;
-        font-size: 14px;
-        letter-spacing: 0.4px;
-        border: 2px solid var(--blue);
-        border-radius: 4px;
-    }
-    #wpfront-notification-bar{
-        display: none;
-    }
+  .more-link > a {
+    background: var(--blue) !important;
+    padding: 8px 12px !important;
+    color: var(--fg-primary) !important;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 0.4px;
+    border: 2px solid var(--blue);
+    border-radius: 4px;
+  }
+  #wpfront-notification-bar {
+    display: none;
+  }
 }
