--- a/gruvbox-dramacool.user.css
+++ b/gruvbox-dramacool.user.css
@@ -2,7 +2,7 @@
 @name           Gruvbox-Dramacool9
 @namespace      github.com/touhidulshawan/gruvbox-dramacool9
 @version        2.1
-@description    Gruvbox Dark Theme for Dramacool9
+@description    Gruvbox Dark Theme for Dramacool
 @author         Touhidul Shawan
 ==/UserStyle== */
 @-moz-document url-prefix("https://dramacool.sh") {
