--- a/torrentqq355.user.css
+++ b/torrentqq355.user.css
@@ -1,3 +1,4 @@
+@-moz-document url-prefix("https://torrentqq355.com") {
 .at-banner {
     display: none !important;
 }
@@ -116,4 +117,5 @@ td {
 .div-head > span,
 .list-board .list-body li > div {
     color: #ebdbb2;
+}
 }
